--- a/localization/ru.json
+++ b/localization/ru.json
@@ -13,5 +13,11 @@
     },
     "title": {
         "sign_in": "Выберите способ входа"
+    },
+    "form": {
+        "phonenumber": "Телефон (+ХХХ-ХХ-ХХХ)",
+        "send_code": "Отправить код",
+        "confirmation_code": "Код подтверждения",
+        "verify": "Подтвердить"
     }
 }
