--- a/localization/en.json
+++ b/localization/en.json
@@ -11,7 +11,9 @@
         "sign_out": "Logout",
         "remove_account": "Remove Account",
         "create_game": "Create game",
-        "find_game": "Find game"
+        "find_game": "Find game",
+        "leave": "Give up",
+        "cancel": "Cancel"
     },
     "title": {
         "sign_in": "Please sign in to proceed"
