--- a/locales/ru.json
+++ b/locales/ru.json
@@ -23,9 +23,11 @@
         "send_code": "Отправить код",
         "confirmation_code": "Код подтверждения",
         "verify": "Подтвердить",
-        "search": "Поиск по никнейму"
+        "search": "Поиск по никнейму",
+        "name": "Имя"
     },
     "error": {
-        "sign_in_failed": "Вход не выполнен"
+        "sign_in_failed": "Вход не выполнен",
+        "name": "Не менее 3 символов"
     }
 }
