--- a/locales/ru.json
+++ b/locales/ru.json
@@ -13,7 +13,8 @@
         "create_game": "Создать игру",
         "find_game": "Найти игру",
         "leave": "Сдаться",
-        "cancel": "Отменить"
+        "cancel": "Отменить",
+        "next": "Далее"
     },
     "title": {
         "sign_in": "Выберите способ входа"
@@ -24,10 +25,11 @@
         "confirmation_code": "Код подтверждения",
         "verify": "Подтвердить",
         "search": "Поиск по никнейму",
-        "name": "Имя"
+        "username": "Никнейм",
+        "password": "Пароль"
     },
     "error": {
         "sign_in_failed": "Вход не выполнен",
-        "name": "Не менее 3 символов"
+        "username": "Не менее 3 символов"
     }
 }
